--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <button id="getRatto">Clicca qui*</button>
         </div>
         <p class="postilla">
-          *Cliccate pure, cioè Simo è ratto ma non è che clccando gli arrivano
+          *Cliccate pure, cioè Simo è ratto ma non è che cliccando gli arrivano
           soldi o roba simile, non è uno scam
         </p>
       </div>
